fix overflow of ceteicean content

--- a/src/components/Play.css
+++ b/src/components/Play.css
@@ -60,3 +60,8 @@
   right: 0;
   overflow: scroll;
 }
+
+/* fix overflow of CETEIcean content */
+.tei-frame #TEI {
+  padding: 20px;
+}
